[gd_scene load_steps=5 format=2]

[ext_resource path="res://Silver Fighter.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.09902

[sub_resource type="CapsuleShape2D" id=2]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -50 )

[node name="FireRate" type="Timer" parent="."]
one_shot = true

[node name="BuffTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
[connection signal="timeout" from="BuffTimer" to="." method="_on_BuffTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
